--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.0'
+        php-version: '7.3'
     - name: Copy .env
       run: copy .env.example .env
     - name: Install Dependencies
-      run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer update --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
@@ -30,8 +30,6 @@ jobs:
         php artisan config:cache
         php artisan migrate --force
     - name: Execute tests (Unit and Feature tests) via PHPUnit
-    
-
       env:
         DB_CONNECTION: mysql
         DB_HOST: db4free.net
@@ -39,5 +37,4 @@ jobs:
         DB_DATABASE: mzalendo
         DB_USERNAME: mzalendo
         DB_PASSWORD: "Messigoat@2021"
-
       run: vendor/bin/phpunit
