--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,11 +16,12 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '7.3'
+        php-version: '8.0'
+        extensions: mbstring, pdo_mysql
     - name: Copy .env
       run: copy .env.example .env
     - name: Install Dependencies
-      run: composer update --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
@@ -30,6 +31,8 @@ jobs:
         php artisan config:cache
         php artisan migrate --force
     - name: Execute tests (Unit and Feature tests) via PHPUnit
+      run: vendor\bin\phpunit
+
       env:
         DB_CONNECTION: mysql
         DB_HOST: db4free.net
@@ -37,4 +40,3 @@ jobs:
         DB_DATABASE: mzalendo
         DB_USERNAME: mzalendo
         DB_PASSWORD: "Messigoat@2021"
-      run: vendor/bin/phpunit
