--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Copy .env
       run: copy .env.example .env
     - name: Install Dependencies
-      run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --no-interaction --no-scripts --no-progress --prefer-dist --ignore-platform-reqs
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
